[tool.poetry]
name = "service-diff-of-set"
version = "0.1.0"
description = ""
authors = ["Dmitriy Shesterkin <dmitriy.shesterkin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
python-multipart = "^0.0.5"
ormar = "^0.10.5"
SQLAlchemy = "1.3.23"
databases = "0.4.1"
aiosqlite = "^0.17.0"
aiofiles = "^0.6.0"
xlrd = "^2.0.1"
alembic = "^1.5.8"
python-dotenv = "^0.17.1"
openpyxl = "^3.0.7"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
aioconsole = "^0.3.1"
pytest-asyncio = "^0.15.1"
pytest-env = "^0.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
